fix(microservises) change config logic to declarative
